--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,6 @@
       <unsubscribe>rsync-maven-wagon-users-unsubscribe@pcl-solutions.com</unsubscribe>
       <post>rsync-maven-wagon-users@pcl-solutions.com</post>
       <archive>http://pcl-solutions.com/pipermail/rsync-maven-wagon-users_pcl-solutions.com/</archive>
-      <otherArchives>
-        <otherArchive>http://base.google.com/base/1/127.0.0.1</otherArchive>
-      </otherArchives>
     </mailingList>
   </mailingLists>
   <parent>
@@ -90,9 +87,25 @@
             <version>2.5</version>
           </dependency>
         </dependencies>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+              <goal>deploy</goal>
+            </goals>
+            <phase>deploy</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven.wagon</groupId>
+      <artifactId>wagon-provider-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+  </dependencies>
   <distributionManagement>
     <site>
       <id>pcl-solutions.com</id>
