--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </organization>
   <inceptionYear>2013</inceptionYear>
   <description>This project is an implementation of an rsync wagon provider, using external rsync</description>
-  <url>http://www.pcl-solutions.com/maven/${project.name}</url>
+  <url>http://www.pcl-solutions.com/maven/${project.artifactId}</url>
   <licenses>
     <license>
       <name>GNU General Public License, version 3 (GPL-3.0)</name>
@@ -98,6 +98,13 @@
         </executions>
       </plugin>
     </plugins>
+    <extensions>
+      <extension>
+        <groupId>com.pcl-solutions.maven.wagons</groupId>
+        <artifactId>rsync-maven-wagon</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </extension>
+    </extensions>
   </build>
   <dependencies>
     <dependency>
@@ -109,7 +116,7 @@
   <distributionManagement>
     <site>
       <id>pcl-solutions.com</id>
-      <url>ftp://ftp.pcl-solutions.com/public_html/maven/${project.name}/${project.version}</url>
+      <url>rsync:www.pcl-solutions.com:/home/pclsolut/public_html/maven/${project.artifactId}/${project.version}</url>
     </site>
   </distributionManagement>
 </project>
