--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pcl-solutions.maven.wagons</groupId>
   <artifactId>rsync-maven-wagon</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <name>Maven Rsync Wagon</name>
   <organization>
     <name>PCL Solutions</name>
